Fix: Addition Mobile Layout 25

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1550,7 +1550,7 @@ body {
     }
     @media (orientation: landscape) {
         .main-content {
-            margin-top: -12rem !important; /* Your -5 value for Landscape */
+            margin-top: -5rem !important; /* Your -5 value for Landscape */
             padding-top: 0.5rem !important;
             margin-bottom: 0 !important;
             padding-bottom: 0 !important;
